# smspanel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  init_db.py  pyproject.toml  requirements.txt  run.py  run.sh  semgrep-results.csv  test.sh  test_api.sh  test_ui.sh
.claude/: settings.local.json
.clinerules/: ssh-testing-server.md
.gitea/workflows/: deploy_gnet.yaml
docs/plans/: 2026-01-21-db-queue-perf.md
instance/: sms.db.backup
scripts/: mock_hkt_api.py  mock_sms_api.py  test_api.sh
src/: __init__.py
src/ccdemo/: __init__.py  config.py  models.py
src/ccdemo/api/: __init__.py  auth.py  sms.py
src/ccdemo/services/: hkt_sms.py  queue.py
src/ccdemo/templates/: base.html  compose.html  dashboard.html  history.html  login.html  register.html  sms_detail.html
src/ccdemo/web/: __init__.py  admin.py  auth.py  sms.py
src/smspanel/: __init__.py  app.py  config.py  models.py
src/smspanel/api/: __init__.py  health.py  queue.py  sms.py
src/static/: style.css
test_ui/: 1_test_login_page_baseline.py  2_test_dashboard_page_baseline.py  3_test_compose_page_baseline.py  4_test_admin_page_baseline.py  5_test_history_page_baseline.py
tests/: conftest.py  mocks.py  test_admin_messages.py  test_api.py  test_constants.py  test_csrf.py  test_database_config.py  test_db_queue.py  test_dead_letter.py  test_docs.py  test_error_format.py  test_hkt_sms.py  test_indexes.py  test_models.py  test_mysql.py  test_queue_status.py  test_rate_limiter.py  test_retry.py  test_security.py
(+28 files in other folders)
