[project]
name = "smspanel"
version = "0.24.0"
description = "A simple SMS panel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "tenacity>=8.2.0",
    "pymysql>=1.1.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
